<resources>
    <string name="app_name">Weather Location</string>
    <string name="permission_denied">Permission denied!!!</string>
    <string name="ok">Ok</string>
    <string name="weather">Weather</string>
    <string name="pin_current_location">Pin\'s the current location</string>
    <string name="in">in</string>
    <string name="save">Save</string>
    <string name="satellite">Satellite</string>
    <string name="clear_map">Clear map</string>
    <string name="restore_locations">Restore location</string>
    <string name="clear_map_message">Are you sure to clear all the markers from the map?</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="user_help_welcome_message">Welcome to <b>Weather location.</b></string>
    <string name="user_help_short_message">You are a tap away from
        any weather on any location!</string>
    <string name="user_help_how_to_add">Long press to the map to take the current weather on the location.</string>
    <string name="user_help_pin_current_location">Click to pin your current location</string>
    <string name="user_help_click_on_window_to_refresh_the_weather">Click the info window to refresh the weather!</string>
    <string name="got_it">Got it!</string>
    <string name="restore_location">Restore location</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete_location">Do you want do delete this location?</string>
</resources>
