<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_pin" android:title="@string/pin_current_location"
        android:icon="@drawable/ic_location_on_white_24dp"
        android:orderInCategory="100" app:showAsAction="always" />
    <item android:id="@+id/action_satellite" android:title="@string/satellite"
        android:checkable="true"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_restore" android:title="@string/restore_locations"
        android:checkable="true"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_clear_map" android:title="@string/clear_map"
        android:checkable="true"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>