<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<fragment
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/map"
    tools:context=".MainActivity"
    android:name="com.google.android.gms.maps.SupportMapFragment" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AA000000"
        android:visibility="gone"
        android:id="@+id/first_time_layout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/got_it"
            android:id="@+id/btnGotit"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/user_help_welcome_message"
            android:id="@+id/textView"
            android:layout_marginTop="100dp"
            android:textColor="#DDFFFFFF"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/user_help_short_message"
            android:id="@+id/textView2"
            android:layout_below="@+id/textView"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"
            android:textSize="16sp"
            android:textColor="#DDFFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/user_help_how_to_add"
            android:id="@+id/textView3"
            android:textSize="16sp"
            android:textColor="#DDFFFFFF"
            android:layout_below="@+id/textView2"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2"
            android:layout_marginTop="25dp"
            android:layout_marginRight="10dp" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="50dp"
            android:id="@+id/imageView"
            android:src="@drawable/arrow_white"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/user_help_pin_current_location"
            android:id="@+id/textView4"
            android:textSize="15sp"
            android:textColor="#DDFFFFFF"
            android:layout_alignBottom="@+id/imageView"
            android:layout_toLeftOf="@+id/imageView"
            android:layout_toStartOf="@+id/imageView"
            android:textIsSelectable="false" />

        <ImageView
            android:layout_width="125dp"
            android:layout_height="100dp"
            android:id="@+id/imageView2"
            android:src="@drawable/info_window"
            android:layout_marginTop="34dp"
            android:layout_below="@+id/textView3"
            android:layout_alignRight="@+id/textView3"
            android:layout_alignEnd="@+id/textView3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/user_help_click_on_window_to_refresh_the_weather"
            android:id="@+id/textView5"
            android:textSize="16sp"
            android:textColor="#DDFFFFFF"
            android:layout_alignBottom="@+id/imageView2"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignStart="@+id/textView3"
            android:layout_toLeftOf="@+id/btnGotit"
            android:layout_toStartOf="@+id/btnGotit" />
    </RelativeLayout>
</FrameLayout>
